--- a/tools/Linux/kodi.sh.in
+++ b/tools/Linux/kodi.sh.in
@@ -29,41 +29,10 @@ APP_BINARY=$LIBDIR/${bin_name}/@APP_BINARY@
 CRASHLOG_DIR=${CRASHLOG_DIR:-$HOME}
 KODI_DATA=${KODI_DATA:-"${HOME}/.${bin_name}"} # mapped to special://home/
 
-# Black Screen on exit fix
-ORIGINAL_DEPTH=`fbset | head -3 | tail -1 | cut -d " " -f 10`
-
-# PiPplware fixes
-if pgrep "fbi" > /dev/null
-then
-    sudo killall fbi >/dev/null 2>&1
-fi
-if pgrep "cec-client" > /dev/null
-then
+if pgrep "cec-client" > /dev/null; then
     sudo service cec stop >/dev/null 2>&1
+    CEC_STOPPED=1
 fi
-
-# EmulationStation screen resolution fix
-save_screen_mode() {
-    local status="$(tvservice -s)"
-    if echo "$status" | grep -qE "(PAL|NTSC)"; then
-        MODE_TYPE=$(echo "$status" | grep -oE "(PAL|NTSC)")
-        MODE_INFO=$(echo "$status" | grep -oE "([0-9]+\:[0-9]+)")
-    else
-        MODE_TYPE=$(echo "$status" | grep -oE "(CEA|DMT)")
-        MODE_INFO=$(echo "$status" | grep -oE "\([0-9]+\)" | tr -d '()')
-    fi
-}
-
-restore_screen_mode() {
-    if [ "$MODE_TYPE" = "PAL" ] || [ "$MODE_TYPE" = "NTSC" ]; then
-        tvservice -c "$MODE_TYPE $MODE_INFO" >/dev/null
-    else
-        tvservice -e "$MODE_TYPE $MODE_INFO" >/dev/null
-    fi
-    sleep 1
-}
-
-save_screen_mode
 
 # Workaround for high CPU load with nvidia GFX
 export __GL_YIELD=USLEEP
@@ -78,6 +47,14 @@ do
         --setlibdir)
             LIBDIR="$2"
             shift; shift
+            ;;
+        --pulse)
+            WANT_PULSE=1
+            shift
+            ;;
+        --standalone)
+            STANDALONE=1
+            shift
             ;;
         *)
             shift
@@ -207,12 +184,22 @@ if command_exists gdb; then
   fi
 fi
 
+if [ "$WANT_PULSE" != "1" ] && pactl list > /dev/null 2>&1 ; then
+ systemctl --user stop pulseaudio.socket
+ systemctl --user stop pulseaudio.service
+ PULSE_STOPPED=1
+fi
+
 LOOP=1
 while [ $(( $LOOP )) = "1" ]
 do
   [ -f "${APPORT_CORE}" ] && rm -f "${APPORT_CORE}"
   LOOP=0
-  ${KODI_BINARY} --lircdev /var/run/lirc/lircd $SAVED_ARGS &
+  if [ -n "$WAYLAND_DISPLAY" ] && [ -z "$STANDALONE" ]; then
+    ${KODI_BINARY} $SAVED_ARGS &
+  else
+    unset DISPLAY; sudo openvt -sw -- su -c "${KODI_BINARY} $SAVED_ARGS" $USER &
+  fi
   CHILD=$!
   wait "${CHILD}"
   RET=$?
@@ -225,21 +212,12 @@ do
   fi
 done
 
-# Raspberry Pi fixes
-restore_screen_mode
-fbset -depth 8 > /dev/null 2>&1
-fbset -depth $ORIGINAL_DEPTH > /dev/null 2>&1
-if pgrep "X" > /dev/null
-then
-    xrefresh >/dev/null 2>&1
-fi
-if [ -f "/usr/bin/cec-daemon" ]
-then
+if [ -n "$CEC_STOPPED" ]; then
     sudo service cec start >/dev/null 2>&1
 fi
-if [ -f "/usr/bin/cec-daemon" ]
-then
-    sudo service cec start >/dev/null 2>&1
+if [ "$PULSE_STOPPED" = "1" ]; then
+ systemctl --user start pulseaudio.service
+ systemctl --user start pulseaudio.socket
 fi
 
 exit $RET
